feat(print): 完善 XML 模板语义与静态检查能力
- 建立统一的模板静态检查模型，收集数据路径、片段引用、节点类型、输出特性及源码位置
- 拆分 XML 解析、语法校验、样式编译、值转换和检查收集职责
- 支持页面结构、页眉页脚、命名样式、编号、条件分支及片段参数
- 新增 boolean 和 join 内置格式化器
- 增加有界十进制转换，避免超大数字展开造成资源风险
- 冻结表达式和自定义标签的检查贡献，保证编译结果可并发复用
- 统一 SpEL 词法变量的静态检查路径表达
- 完善扩展异常脱敏与原因链保留
- 补充容量治理、并发、片段作用域及静态检查回归测试
- 同步模板编写、扩展开发和验证文档